Issue #3082570 by tormi: geolocation-map-control button is not correctly aligned

--- a/css/geolocation-map.css
+++ b/css/geolocation-map.css
@@ -36,6 +36,7 @@
   padding: 0 1em;
   z-index: 3;
   border: 0;
+  width: auto;
 }
 
 .geolocation-map-control input.location:focus {
